--- a/jaijite/res/layout/led_fragment.xml
+++ b/jaijite/res/layout/led_fragment.xml
@@ -1,13 +1,41 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
-    <TextView
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center"
-        android:text="照明" />
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/lightBlue"
+            android:gravity="center"
+            android:padding="10dip"
+            android:text="LED灯"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/add_btn"
+            android:layout_width="20dip"
+            android:layout_height="20dip"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dip"
+            android:background="@drawable/btn_add" />
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/led_list_iew"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1.0"
+        android:divider="@color/silverGray"
+        android:dividerHeight="1px"
+        android:scrollbars="none" >
+    </ListView>
 
 </LinearLayout>
