--- a/jaijite/res/layout/activity_led_control.xml
+++ b/jaijite/res/layout/activity_led_control.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -48,7 +49,8 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent"
+        android:layout_margin="10dp" >
 
         <LinearLayout
             android:layout_width="fill_parent"
